Dec 30, 2023: version 3.3.0

    * major change to build system: by Markus Mützel

Sept 18, 2023: version 3.2.1

    * cmake update: add "None" build type, from Antonio Rojas, for Arch Linux
    * cmake updates: link executables to SuiteSparse_config that depend on it;
        by Markus Muetzel

Sept 8, 2023: version 3.2.0

    * cmake updates: SuiteSparse:: namespace by Markus Muetzel

June 16, 2023: version 3.0.4

    * cmake build system updates: update by Markus Muetzel

Jan 17, 2023: version 3.0.3

    * SuiteSparse_config: now v7.0.0
    * minor change to the build system: test coverage

Dec 9, 2022: version 3.0.2

    * minor change to the build system
    * tests: fixed matrix download in python test scripts (no change to
        the compiled library itself, other than the version/date)

Nov 12, 2022: version 3.0.0

    * minor change to the build system
    * integers: int (32-bit) and SuiteSparse_long (nominally 64-bit) replaced
        with int32_t and int64_t.

Version 2.0.4, May 25, 2019
