@@ -107,7 +107,7 @@ find_package ( KLU 2.3.0 REQUIRED )
 find_package ( KLU_CHOLMOD 2.3.0 REQUIRED )
 find_package ( LDL 3.3.0 REQUIRED )
 find_package ( LAGraph 1.1.0 )
-find_package ( Mongoose 3.3.0 REQUIRED )
+find_package ( SuiteSparse_Mongoose 3.3.0 REQUIRED )
 find_package ( ParU 0.1.0 REQUIRED )
 find_package ( RBio 4.3.0 REQUIRED )
 find_package ( SPEX 2.3.0 REQUIRED )    # requires GMP and MPFR
